# AndroidTakeHomeProject

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/daniyalxdubizzle/androidtakehomeproject/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/daniyalxdubizzle/androidtakehomeproject/ui/: MainActivityTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/daniyalxdubizzle/androidtakehomeproject/adapters/home/: ItemHomeAdapter.kt
app/src/main/java/com/daniyalxdubizzle/androidtakehomeproject/app/: MainApplication.kt
app/src/main/java/com/daniyalxdubizzle/androidtakehomeproject/data/model/remote/: ResponseEvent.kt
app/src/main/java/com/daniyalxdubizzle/androidtakehomeproject/data/model/response/: ItemListResponse.kt  ItemPagination.kt  ItemResponse.kt
app/src/main/java/com/daniyalxdubizzle/androidtakehomeproject/data/repo/: ListingsItemRepo.kt
app/src/main/java/com/daniyalxdubizzle/androidtakehomeproject/data/retrofit/: RetrofitInterface.kt
app/src/main/java/com/daniyalxdubizzle/androidtakehomeproject/di/: NetworkModule.kt
app/src/main/java/com/daniyalxdubizzle/androidtakehomeproject/ui/: ItemDetailFragment.java  MainActivity.kt
app/src/main/java/com/daniyalxdubizzle/androidtakehomeproject/utilities/: CommonExtention.kt  Constants.kt  GeneralHelper.kt  ImageCache.kt
app/src/main/java/com/daniyalxdubizzle/androidtakehomeproject/viewmodels/: ItemViewModel.kt  ItemViewModelProviderFactory.java
app/src/main/jni/: CMakeLists.txt  keys.c
app/src/main/res/anim/: views_animation.xml
app/src/main/res/drawable/: drop_show_gradient.xml  rounded_button.xml
app/src/main/res/layout/: activity_main.xml  item_detail_fragment.xml  item_loading_shimmer.xml  list_item.xml  toolbar.xml
app/src/main/res/layout-land/: item_detail_fragment.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/daniyalxdubizzle/androidtakehomeproject/: CapititalizeWordsTest.kt  DateParseTest.kt  ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
